# python-harness

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  harness_structure.yaml  pyproject.toml
.claude/: settings.json
.claude/hooks/: guard_no_print.py  post_session_checks.sh
.claude/plans/: wild-noodling-crayon.md
.github/workflows/: pr-check.yml
.harness/: project-policy.yaml
docs/: code-convention.yaml  operations.md
docs/adr/: 0001-three-agent-architecture.md  0002-computational-sensors-first.md  (+14 more)
harness/: __init__.py
scripts/: auto_pr_pipeline.py  check_structure.py  create_pr_body.py  doctor.py  init_harness.py  pr_review.py  run_harness.py  run_phases.py
tests/: test_agents.py  test_api_client.py  test_auto_pr_pipeline.py  test_bootstrap.py  test_bootstrap_migrate.py  test_checkpoint.py  test_code_reviewer.py  test_context_filter.py  test_contracts.py  test_docs_diff.py  test_doctor.py  test_guides.py  test_init_harness.py  test_knowledge.py  test_linter.py  test_modify_context.py  test_orchestrator_integration.py  test_orchestrator_knowledge.py  test_orchestrator_pipeline_gate.py  test_phase_manager.py  test_pipeline.py  test_pr_review.py  test_project_policy.py  test_review_artifacts.py  test_review_conventions.py  test_review_criteria.py  test_review_intent.py  test_review_pipeline_integration.py  test_review_pr_body.py  test_review_reflection.py  test_review_worktree.py  test_run_harness.py  test_run_phases.py  test_sensors_missing_tool.py  test_session_fork.py  test_shell.py  test_structure.py  test_structure_gate.py  test_type_checker.py
(+64 files in other folders)
